--- a/app/assets/stylesheets/partials/shame/_shame.scss
+++ b/app/assets/stylesheets/partials/shame/_shame.scss
@@ -14,6 +14,7 @@
 		http://csswizardry.com/2013/04/shame-css/
 */
 
+// This is all for the price slider:
 .facet-filtered { width: 220px; clear: both; margin: 20px 0 10px; }
 .facet-filtered .viewport { width: 200px; height: 200px; overflow: hidden; position: relative; }
 .facet-filtered .overview { list-style: none; position: absolute; left: 0; top: 0; }
@@ -25,3 +26,5 @@
 .facet-filtered .thumb .end { overflow: hidden; height: 5px; width: 13px; }
 .facet-filtered .disable{ display: none; }
 .noSelect { user-select: none; -o-user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; }
+// Couldn't get the facets to not be hidden under the header:
+#facets { margin-top: 80px } 
