--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -1,11 +1,10 @@
 <a class="tile tile--deals" href="<%#= link %>">
   <article class="box" role="article">
-
     <div class="tile__meta">
       <span class="tile__meta__image" data-picture data-alt="<%#= alt %>">
         <img src="<%#= logo %>" alt="<%#= alt %>">
       </span>
-      <p class="tile__meta__desc"><%#= description %></p>
+      <p class="tile__meta__desc"><%= result.title %></p>
     </div>
 
     <span class="tile__meta__icon">
