--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -1,15 +1,11 @@
-<!-- <a class="tile tile--deals" href="<%= link %>">
+<a class="tile tile--deals" href="<%#= link %>">
   <article class="box" role="article">
 
     <div class="tile__meta">
-      <span class="tile__meta__image" data-picture data-alt="<%= alt %>">
-        <span data-src="<%= logo %>"></span>
-        <span data-src="<%= logo_2x %>" data-media="(min-device-pixel-ratio: 2.0)"></span>
-        <noscript>
-          <img src="<%= logo %>" alt="<%= alt %>">
-        </noscript>
+      <span class="tile__meta__image" data-picture data-alt="<%#= alt %>">
+        <img src="<%#= logo %>" alt="<%#= alt %>">
       </span>
-      <p class="tile__meta__desc"><%= description %></p>
+      <p class="tile__meta__desc"><%#= description %></p>
     </div>
 
     <span class="tile__meta__icon">
@@ -17,4 +13,4 @@
     </span>
 
   </article>
-</a> -->
+</a>
