--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -1,5 +1,5 @@
 /* ======================================================================================
-   @ABSTRACTIONS -> ARROWS
+   @ABSTRACTIONS -> BOX
    ====================================================================================== */
 
 /*
