Renamed detail_view to detail-view

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,23 +1,23 @@
 <br /><br /><br /><br /><br /><br />
 
 <main id="main" role="main">
-  <div class="detail_view detail_view--event box">
+  <div class="detail-view detail-view--event box">
 
-    <div class="detail_view__controls">
+    <div class="detail-view__controls">
 
 
-      <button class="detail_view__controls__button btn">
+      <button class="detail-view__controls__button btn">
         <span class="icon icon--favs icon--lrg icon--fixed-width icon--spacing" aria-hidden="true"></span>
-        <span class="detail_view__controls__txt">Save</span>
+        <span class="detail-view__controls__txt">Save</span>
       </button>
 
-      <button class="detail_view__controls__button btn">
+      <button class="detail-view__controls__button btn">
         <span class="icon icon--comment icon--lrg icon--fixed-width icon--spacing" aria-hidden="true"></span>
-        <span class="detail_view__controls__txt">Share</span>
+        <span class="detail-view__controls__txt">Share</span>
       </button>
 
       <% if in_lightbox? %>
-        <button class="detail_view__controls__button detail_view__controls__button--close btn">
+        <button class="detail-view__controls__button detail-view__controls__button--close btn">
           <span class="icon icon--close-sml icon--sml icon--fixed-width" aria-hidden="true"></span>
           <span class="hide-visually">Close</span>
         </button>
@@ -25,27 +25,27 @@
 
     </div>
 
-    <div class="detail_view__inner">
+    <div class="detail-view__inner">
 
       <header>
-        <h2 class="detail_view__hdr"><%= @event.name %></h2>
+        <h2 class="detail-view__hdr"><%= @event.name %></h2>
 
-        <div class="detail_view__meta">
-          <p class="detail_view__meta__location">
+        <div class="detail-view__meta">
+          <p class="detail-view__meta__location">
             <span class="icon icon--pin" aria-hidden="true"></span>
             <%= @event.location %>
           </p>
-          <p class="detail_view__meta__date">
+          <p class="detail-view__meta__date">
             <%= Time.new(@event.start).strftime("%d %b %Y") %> to <%= Time.new(@event.finish).strftime("%d %b %Y") %>
           </p>
         </div>
       </header>
 
-      <%= image_tag @event.image, alt: @event.alt if @event.image %>
+      <%= image_tag @event._links['image']['href'], alt: @event._links['image'] %>
 
-      <div class="detail_view__details">
-        <h3 class="detail_view__details__hdr">Event Details</h3>
-        <div class="detail_view__details__content">
+      <div class="detail-view__details">
+        <h3 class="detail-view__details__hdr">Event Details</h3>
+        <div class="detail-view__details__content">
           <%= @event.description %>
         </div>
       </div>
