--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -1,6 +1,6 @@
 $border: 1px solid #cdcdcd;
 
-.detail_view {
+.detail-view {
   background-color: white;
 
   @include respond-min($non-palm) {
@@ -9,12 +9,12 @@ $border: 1px solid #cdcdcd;
   }
 }
 
-.detail_view__controls {
+.detail-view__controls {
   border-bottom: $border;
   width: 100%;
   @extend %clear-fix;
 
-  .detail_view__controls__button {
+  .detail-view__controls__button {
     border-right: $border;
     width: 50%;
     float: left;
@@ -25,7 +25,7 @@ $border: 1px solid #cdcdcd;
     }
   }
 
-  .detail_view__controls__button--close {
+  .detail-view__controls__button--close {
     border: 0;
     background-color: black;
     color: white;
@@ -42,7 +42,7 @@ $border: 1px solid #cdcdcd;
   }
 }
 
-.detail_view__inner {
+.detail-view__inner {
   @include to-rem(padding, $spacing-base * 1.5);
 }
 
@@ -52,15 +52,15 @@ $border: 1px solid #cdcdcd;
 
 
 /* Event */
-.detail_view--event {
+.detail-view--event {
 
-  .detail_view__hdr {
+  .detail-view__hdr {
     color: #242424;
     font-family: $font-family-opensans;
     @include font-size($font-size + 24);
   }
 
-  .detail_view__meta {
+  .detail-view__meta {
     border-top: $border;
     border-bottom: $border;
     color: #777;
@@ -69,7 +69,7 @@ $border: 1px solid #cdcdcd;
     @include font-size($font-size-sml);
   }
 
-  .detail_view__meta__location {
+  .detail-view__meta__location {
     float: right;
     .icon {
       @include to-rem(padding-right, $spacing-quarter);
@@ -77,15 +77,15 @@ $border: 1px solid #cdcdcd;
     }
   }
 
-  .detail_view__details {
+  .detail-view__details {
     @include to-rem(margin, $spacing-base 0 0 0);
   }
-  .detail_view__details__hdr {
+  .detail-view__details__hdr {
     font-weight: bold;
     @include to-rem(margin, $spacing-third 0);
     @include font-size($font-size-sml);
   }
-  .detail_view__details__content {
+  .detail-view__details__content {
     @include font-size($font-size);
   }
 
