--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,6 @@
 					<nav class="header-menu-toggle__nav drop-down js-drop-down" role="navigation" aria-label="Sub navigation" id="nav-sub">
 						<ul class="nav-sub">
 							<!-- Shopping centre opening hours -->
-							<!-- [BACK END] the hours need to be made dynamic -->
 							<li class="open-hours-link"><a href="<%= centre_trading_hours_path( params[ :centre_id ] || params[ :id ] ) %>"><span class="icon icon--hours" aria-hidden="true"></span> <strong>Open <%= @centre.today_opening_hour %> - <%= @centre.today_closing_hour %> today</strong> <span class="icon icon--arrow-right" aria-hidden="true"></span></a></li>
 							<!-- //Shopping centre opening hours -->
 							<li class="shopping-hrs-link"><a href="#"><span class="icon icon--hours icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Shopping Hours</span></a></li>
@@ -159,8 +158,7 @@
 			<!-- //Shopping centre select -->
 
 			<!-- Shopping centre opening hours -->
-			<!-- [BACK END] the hours need to be made dynamic -->
-			<a href="#" class="open-hours-link"><span class="icon icon--hours" aria-hidden="true"></span> <strong>Open 9am - 6pm today</strong> <span class="icon icon--arrow-right" aria-hidden="true"></span></a>
+      <a href="<%= centre_trading_hours_path( params[ :centre_id ] || params[ :id ] ) %>" class="open-hours-link"><span class="icon icon--hours" aria-hidden="true"></span> <strong>Open <%= @centre.today_opening_hour %> - <%= @centre.today_closing_hour %> today</strong> <span class="icon icon--arrow-right" aria-hidden="true"></span></a>
 			<!-- //Shopping centre opening hours -->
 
 		</div>
@@ -178,7 +176,6 @@
 
 			<!-- Main navigation -->
 			<nav role="navigation" aria-label="Main navigation">
-				<!-- [BACK END] `is-active` class needs to be appended to the active anchor element e.g. `<a href="#" class="is-active">` -->
 					<ul class="nav-main horiz-list horiz-list--fit horiz-list--center horiz-list--dividers">
 					  <li><%= link_to centre_stores_path(params[:centre_id] || params[:id]),
 					    :class => page?(:stores) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Stores</span><% end %></li>
