--- a/app/views/stores/_map.html.erb
+++ b/app/views/stores/_map.html.erb
@@ -2,7 +2,7 @@
 <div id="map">Not supported... sucks for you!</div>
 <![endif]-->
 <!--[if gt IE 8]><--!>
+<div id="map" class="map">Loading map...</div>
 <%= javascript_include_tag 'http://maps.micello.com/webmap/v0/micellomap.js' %>
 <%= javascript_include_tag 'map' %>
-<div id="map">Loading map...</div>
 <!--><![endif]-->
