--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -1,9 +1,9 @@
 <a class="tile tile--deals" href="<%#= link %>">
   <article class="box" role="article" style="margin-top:110px">
     <div class="tile__meta">
-      <p class="tile__meta__desc"><%= result.title %></p>
-      <span class="tile__meta__image" data-picture data-alt="<%#= alt %>">
-        <img src="<%= result.retailer_logo_url %>" alt="<%#= alt %>">
+      <p class="tile__meta__desc"><%= deal.title %></p>
+      <span class="tile__meta__image" data-picture data-alt="<%= deal.store_name %> logo">
+        <img src="<%= deal.retailer_logo_url %>" alt="<%= deal.store_name %> logo">
       </span>
     </div>
 
