Don't need this styling.

--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -1,5 +1,5 @@
 <a class="tile tile--deals" href="<%#= link %>">
-  <article class="box" role="article" style="margin-top:110px">
+  <article class="box" role="article">
     <div class="tile__meta">
       <p class="tile__meta__desc"><%= deal.title %></p>
       <span class="tile__meta__image" data-picture data-alt="<%= deal.store_name %> logo">
