--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -203,7 +203,13 @@ $color-link: $color-brand !default;
 
 $color-link-visited: lighten($color-link, 15%) !default;
 
+/* Off white */
+$color-off-white: #f2f2f2 !default;
+
 /* --Greyscale-- */
+/*
+	Note: need to sunset these vars but cannot do until we remove all modules/abstractions that use them.
+*/
 $color-grey: lighten(#000, 50%) !default;
 
 	/* Light */
@@ -216,7 +222,7 @@ $color-grey: lighten(#000, 50%) !default;
 	$color-grey-lightest: lighten(#000, 89%) !default;
 
 	/* Off white */
-	$color-off-white: lighten(#000, 95%) !default;
+	//$color-off-white: lighten(#000, 95%) !default;
 
 	/* Dark */
 	$color-grey-dark: lighten(#000, 30%) !default;
