changing bg colour to body element not html as it makes things easier

--- a/app/assets/stylesheets/partials/base/_main.scss
+++ b/app/assets/stylesheets/partials/base/_main.scss
@@ -5,10 +5,12 @@
 html {
 	font-size: ($font-size/16)+em;
 	line-height: $line-height-ratio;
-	background-color: #e8e8e8;
 }
 
-body {@include prefix(animation, fade-in 1.5s 0.5s both);}
+body {
+	@include prefix(animation, fade-in 1.5s 0.5s both);
+	background-color: #e8e8e8;
+}
 
 /* Animation: fade in the `body` */
 @include prefix-keyframe(fade-in) {
