adding conditional markup for detail view container based on lightbox if statement

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,9 +2,13 @@
 
 <main class="main" id="main" role="main">
 
-  <article role="article" class="detail-view detail-view--event">
-  <!-- [BACK END] more attr's needed for light box view -->
-  <!-- <article role="article" class="detail-view detail-view--event" tabindex="-1" role="dialog" aria-labelledby="detail-view__hdr" aria-hidden="true"> -->
+  <!-- [TODO] need to get the main detail view container into a layout -->
+  <% if in_lightbox? %>
+    <div class="page-overlay"></div>
+    <article role="article" class="detail-view detail-view--event" tabindex="-1" role="dialog" aria-labelledby="detail-view__hdr" aria-hidden="true">
+  <% else %>
+    <article role="article" class="detail-view detail-view--event">
+  <% end %>
 
     <%= render "shared/detail_view/controls" %>
 
@@ -45,6 +49,7 @@
         </div>
     </div>
 
+  <!-- [TODO] need to get the main detail view container into a layout -->
   </article>
 
 </main>
