updating favs icon to be grey by default and adding styles for when favs are added

--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -774,8 +774,27 @@ $hero-banner-height-lrg: 380 !default;
 				display: inline-block;
 			}
 
-				/* Icon */
-				.header & .icon:before {color: $color-brand;}
+			/* Favs are added */
+			&.is-favs-added .favs-link__count-icon {
+				-webkit-animation: bounce 0.6s 3s 3 both;
+  			animation: bounce 0.6s 3s 3 both;
+			}
+
+			/* 'Bounce' animation */
+			@-webkit-keyframes bounce {
+			  0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
+			  40% {-webkit-transform: translateY(-10px);}
+			  60% {-webkit-transform: translateY(-5px);}
+			}
+
+			@keyframes bounce {
+			  0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+			  40% {transform: translateY(-10px);}
+			  60% {transform: translateY(-5px);}
+			}
+
+				/* Favs are added change icon to red */
+				.header &.is-favs-added .icon:before {color: $color-brand;}
 
 				/* Count */
 				em {
