--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -92,11 +92,11 @@
 					<!-- //My account -->
 
 					<!-- Favourites (non-palm devices) -->
-					<!-- [BACK END] for this favourites link and count we have to have 2 sets of HTML; 1 for palm devices and 1 for non-palm devices, palm device link is in the source below -->
+					<!-- [BACK END] when an item has been added to 'Favourites' need to append class `is-favs-added` -->
 					<a href="#" class="favs-link hide-fully--palm">
 						<span class="favs-link__count-icon">
 							<span class="icon icon--favs icon--flush-top icon--kilo" aria-hidden="true"></span>
-							<em>58</em>
+							<em></em>
 						</span>
 						<span class="favs-link__txt"> Favourites</span>
 					</a>
@@ -128,11 +128,11 @@
 				<!-- //Search toggle btn -->
 
 				<!-- Favourites -->
-				<!-- [BACK END] for this favourites link and count we have to have 2 sets of HTML; 1 for palm devices and 1 for non-palm devices, non-palm device link is in the source above -->
+				<!-- [BACK END] when an item has been added to 'Favourites' need to append class `is-favs-added` -->
 				<a href="#" class="favs-link">
 					<span class="favs-link__count-icon">
 						<span class="icon icon--favs icon--flush-top icon--kilo" aria-hidden="true"></span>
-						<em>99</em>
+						<em></em>
 					</span>
 					<span class="hide-visually"> Favourites</span>
 				</a>
