fixing up meta element - event date and location

--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -97,6 +97,17 @@ $grey-light: #dfdfdf !default;
   /* Subtle text */
   .detail-view__subtle-txt {color: $color-light-txt;}
 
+  /* Meta */
+  .detail-view__meta li {
+    width: 50%;
+    @include to-rem(padding-right, $spacing-half);
+
+    &:last-child {
+      padding-right: 0;
+      text-align: right;
+    }
+  }
+
   /* --Controls-- */
   .detail-view__controls {
     width: 100%;
@@ -132,15 +143,4 @@ $grey-light: #dfdfdf !default;
   /* --Variations-- */
 
   /* -Event- */
-  .detail-view--event {
-
-    /* Meta */
-    /*.detail-view__meta__location {
-      float: right;
-      .icon {
-        @include to-rem(padding-right, $spacing-quarter);
-        @include font-size($font-size-lrg + 2, 0.5);
-      }
-    }*/
-
-  }
+  .detail-view--event {}
