improves browser not supported message

--- a/app/views/stores/_map.html.erb
+++ b/app/views/stores/_map.html.erb
@@ -1,5 +1,5 @@
 <!--[if lte IE 8]>
-<div id="map">Not supported... sucks for you!</div>
+<div id="map">Upgrade your browser, limited support for older browsers coming soon.</div>
 <![endif]-->
 <!--[if gt IE 8]><--!>
 <div id="map" class="map">Loading map...</div>
