--- a/app/assets/stylesheets/partials/modules/widgets/_map.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map.scss
@@ -1,10 +1,12 @@
 .map__stores {
   background-color: #fff;
-  float: left;
   border-right: 1px solid #bababa;
   overflow: auto;
+  position: absolute;
+  @include to-rem(top, 110);
+  bottom: 0;
+  left: 0;
   @include to-rem(width, 450);
-  @include to-rem(height, 480);
 
   li {
     padding: 10px 20px;
@@ -31,7 +33,10 @@
 
 #map {
   background-color: #fff;
-  @include to-rem(height, 480);
-  @include to-rem(margin-left, 450);
+  position: absolute;
+  @include to-rem(top, 110);
+  bottom: 0;
+  @include to-rem(left, 450);
+  right: 0;
 }
 
