--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,9 @@
 
 	<%= render "/layouts/header" %>
 
-	<%= yield %>
+	<main class="main container" id="main" role="main">
+		<%= yield %>
+	</main>
 
 	<%= render "/shared/javascripts_global" %>
 
