--- a/app/views/shared/detail_view/_controls.html.erb
+++ b/app/views/shared/detail_view/_controls.html.erb
@@ -1,20 +1,23 @@
 <div class="detail-view__controls detail-view__divider">
 
-  <button class="detail-view__controls__button btn">
-    <span class="icon icon--favs icon--lrg icon--fixed-width icon--spacing" aria-hidden="true"></span>
-    <span class="detail-view__controls__txt">Save</span>
-  </button>
-
-  <button class="detail-view__controls__button btn">
-    <span class="icon icon--comment icon--lrg icon--fixed-width icon--spacing" aria-hidden="true"></span>
-    <span class="detail-view__controls__txt">Share</span>
-  </button>
+  <ul class="horiz-list horiz-list--fit horiz-list--center">
+    <li>
+      <!-- [BACK END] once this button has been submitted append class 'is-saved' -->
+      <button type="submit" class="detail-view__controls__btn btn"><span class="icon icon--favs icon--lrg" aria-hidden="true"></span> Save</button></li><!--
+    --><li>
+      <button type="button" class="detail-view__controls__btn btn js-drop-down-trigger" aria-haspopup="true" aria-owns="share-options"><span class="icon icon--share icon--lrg" aria-hidden="true"></span> Share</button>
+      <ul class="social-share drop-down js-drop-down horiz-list" id="share-options">
+        <li class="social-share__facebook"><a href="#"><span class="icon icon--facebook" aria-hidden="true"></span><span class="hide-visually"> Facebook</span></a></li>
+        <li class="social-share__twitter"><a href="#"><span class="icon icon--twitter" aria-hidden="true"></span><span class="hide-visually"> Twitter</span></a></li>
+        <li class="social-share__email"><a href="#"><span class="icon icon--email" aria-hidden="true"></span><span class="hide-visually"> Email</span></a></li>
+        <li class="social-share__google"><a href="#"><span class="icon icon--google-plus" aria-hidden="true"></span><span class="hide-visually"> Google+</span></a></li>
+        <li class="social-share__pinterest"><a href="#"><span class="icon icon--pinterest" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a></li>
+      </ul>
+    </li>
+  </ul>
 
   <% if in_lightbox? %>
-    <button class="detail-view__controls__button detail-view__controls__button--close btn">
-      <span class="icon icon--close-sml icon--sml icon--fixed-width" aria-hidden="true"></span>
-      <span class="hide-visually">Close</span>
-    </button>
+    <button type="button" class="detail-view__controls__btn detail-view__controls__btn--close btn"><span class="icon icon--close-sml" aria-hidden="true"></span> <span class="hide-visually">Close</span></button>
   <% end %>
 
 </div>
