--- a/app/views/centres/show.html.erb
+++ b/app/views/centres/show.html.erb
@@ -18,7 +18,7 @@
   </style>
 <% end %>
 
-<div id="pin-board">
+<div id="pin-board" class="pin-board">
 
   <%- @stream.each_slice(4) do |group| -%>
     <%- group.each do |result| -%>
