--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
   </span>
 </nav>
 
-<div id="pin-board">
+<div id="pin-board" class="pin-board">
   <%- @search.products.each_slice(4) do |group| -%>
     <%- group.each do |product| -%>
       <div class="tile products isotope-item" data-url="">
