--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,44 +1,29 @@
-<!-- [TODO] need to get the main detail view container into a layout -->
-<% if in_lightbox? %>
-  <div class="page-overlay"></div>
-  <article role="article" class="detail-view detail-view--event" tabindex="-1" role="dialog" aria-labelledby="detail-view__hdr" aria-hidden="true">
-<% else %>
-  <article role="article" class="detail-view detail-view--event">
-<% end %>
+<div class="island island--top-btm detail-view__divider">
+  <div class="container">
 
-  <%= render "shared/detail_view/controls" %>
+    <header class="detail-view__mrg-base">
+      <h2 class="detail-view__hdr hn" id="detail-view__hdr"><%= @event.name %></h2>
 
-  <div class="island island--top-btm detail-view__divider">
-    <div class="container">
+      <ul class="detail-view__meta islet islet--top-btm detail-view__divider detail-view__divider--top horiz-list horiz-list--fit">
+        <li class="detail-view__subtle-txt"><time datetime="<%= Time.new(@event.start).strftime("%Y-%m-%d") %>"><%= Time.new(@event.start).strftime("%d %b %Y") %></time> to <time datetime="<%= Time.new(@event.start).strftime("%Y-%m-%d") %>"><%= Time.new(@event.finish).strftime("%d %b %Y") %></time></li><!--
+      --><li><span class="icon icon--pin icon--lrg icon--spacing" aria-hidden="true"></span><%= @event.location %></li>
+      </ul>
+    </header>
 
-      <header class="detail-view__mrg-base">
-        <h2 class="detail-view__hdr hn" id="detail-view__hdr">Event name</h2>
-
-        <ul class="detail-view__meta islet islet--top-btm detail-view__divider detail-view__divider--top horiz-list horiz-list--fit">
-          <li class="detail-view__subtle-txt"><time datetime="<%= Time.new(@event.start).strftime("%Y-%m-%d") %>"><%= Time.new(@event.start).strftime("%d %b %Y") %></time> to <time datetime="<%= Time.new(@event.start).strftime("%Y-%m-%d") %>"><%= Time.new(@event.finish).strftime("%d %b %Y") %></time></li><!--
-        --><li><span class="icon icon--pin icon--lrg icon--spacing" aria-hidden="true"></span><%= @event.location %></li>
-        </ul>
-      </header>
-
-      <div class="detail-view__media detail-view__mrg-base">
-        <%#= image_tag @event._links['image']['href'], alt: @event._links['image'] %>
-      </div>
-
-      <h3 class="detail-view__hdr-sub hn">Event Details</h3>
-      <div class="detail-view__desc">
-        <%= @event.description %>
-      </div>
-
+    <div class="detail-view__media detail-view__mrg-base">
+      <%= image_tag ImageService.transform(ref: @event.image_ref, size: "800x800"), alt: @event.name %>
     </div>
+
+    <h3 class="detail-view__hdr-sub hn">Event Details</h3>
+    <div class="detail-view__desc">
+      <%= @event.description %>
+    </div>
+
   </div>
+</div>
 
-  <div class="island island--top-btm">
-    <div class="container">
-
-        <h3 class="detail-view__hdr-sub hn">Event Schedule</h3>
-
-      </div>
-  </div>
-
-<!-- [TODO] need to get the main detail view container into a layout -->
-</article>
+<div class="island island--top-btm">
+  <div class="container">
+      <h3 class="detail-view__hdr-sub hn">Event Schedule</h3>
+    </div>
+</div>
