--- a/app/views/layouts/detail_view.html.erb
+++ b/app/views/layouts/detail_view.html.erb
@@ -1,3 +1,5 @@
+<% content_for :class_for_body, "page-detail-view" %>
+
 <% if in_lightbox? %>
   <div class="page-overlay"></div>
   <article role="article" class="detail-view detail-view--event" tabindex="-1" role="dialog" aria-labelledby="detail-view__hdr" aria-hidden="true">
