--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -3,7 +3,7 @@
 <div id="pin-board" class="pin-board">
 
   <%- @deals.each do |deal| -%>
-    <%= render partial: "shared/tiles/deal", locals: {deal: deal} %>
+    <%= render partial: "shared/tiles/deal", locals: {result: deal} %>
   <%- end -%>
 
 </div>
