--- a/app/assets/stylesheets/partials/layout/_main.scss
+++ b/app/assets/stylesheets/partials/layout/_main.scss
@@ -4,8 +4,6 @@
 
 .main {
 
-	/* Temp fix to turn off `.container` rules for detail views, this will end up using 1 generic hook: `.detail-view-page` */
-	.events.show &,
-	.deals.show &,
-	.products.show & {width: auto;}
+	/* Turn off `.container` rules for detail views */
+	.page-detail-view & {width: auto;}
 }
