--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -102,6 +102,7 @@ $grey-light: #dfdfdf !default;
     width: 50%;
     @include to-rem(padding-right, $spacing-half);
 
+    /* Turn off for last child */
     &:last-child {
       padding-right: 0;
       text-align: right;
@@ -109,19 +110,14 @@ $grey-light: #dfdfdf !default;
   }
 
   /* --Controls-- */
-  .detail-view__controls {
-    //width: 100%;
-    //@extend %clear-fix;
+  /* Increase text size at this breakpoint */
+  @include respond-min($non-palm) {
+    .detail-view__controls .horiz-list > li {}
+  }
 
-    .detail-view__controls__button {
-      //width: 50%;
-      //float: left;
-      //@include to-rem(padding, $spacing-half $spacing-base);
-
-      //@include respond-min($non-palm) {
-        //width: auto;
-      //}
-    }
+  .detail-view__controls__btn {
+    display: block;
+    @include to-rem(padding, $spacing-half);
   }
 
     /*.detail-view__controls__button--close {
@@ -137,7 +133,6 @@ $grey-light: #dfdfdf !default;
       @include respond-min($non-palm) {
         display: block;
       }
-
     }*/
 
   /* --Variations-- */
