working on product detail view

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
 
     <header class="detail-view__mrg-base">
-      <h2 class="detail-view__hdr hn" id="detail-view__hdr"><%= @event.name %></h2>
-
+      <h2 class="detail-view__hdr hn" id="detail-view__hdr"><%= @product.name %></h2>
+      <p></p>
     </header>
 
     <div class="detail-view__media detail-view__mrg-base">
