--- a/app/views/shared/detail_view/_controls.html.erb
+++ b/app/views/shared/detail_view/_controls.html.erb
@@ -1,6 +1,6 @@
 <div class="detail-view__controls detail-view__divider">
 
-  <ul class="horiz-list horiz-list--fit horiz-list--center">
+  <ul class="horiz-list horiz-list--fit horiz-list--center horiz-list--dividers">
     <li>
       <!-- [BACK END] once this button has been submitted append class 'is-saved' -->
       <button type="submit" class="detail-view__controls__btn btn"><span class="icon icon--favs icon--lrg" aria-hidden="true"></span> Save</button></li><!--
