small updates to 2 abstractions so they can be better used

--- a/app/assets/stylesheets/partials/abstractions/_island.scss
+++ b/app/assets/stylesheets/partials/abstractions/_island.scss
@@ -15,10 +15,7 @@
 
 /* Shared */
 .island,
-.islet {
-	@extend %clear-fix;
-	@extend %mrg-base;
-}
+.islet {@extend %clear-fix;}
 
 /* Island - full padding */
 .island {@include to-rem(padding, $spacing-base);}
