--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -2,59 +2,61 @@
    @BUTTONS -> MAIN
    ====================================================================================== */
 
-/* 
-	Usage: 
+/*
+	Usage:
 		The main button for the site.
-	
+
 	Note:
 		Extends from `.btn`, see: 'buttons/base'.
-	
+
 	Demo:
 		Style Guide -> Buttons -> Main
 */
 
 .btn--main {
-	@include to-em(padding, $spacing-half $spacing-base);
-	@include linear-gradient($color-brand, darken($color-brand, 15%), $override-bg-color: true, $bg-color-override: $color-brand);
-	box-shadow: inset 0 1px 0 rgba(#fff, 0.4),
-				1px 1px 2px rgba(#000, 0.3);
-	text-shadow: 0 1px 1px rgba(#000, 0.35);
-	border-radius: $border-radius;            
-	
-	/* Parent + pseudo classes */
+	@include font-size($font-size-sml, normal);
+	@include to-em(padding, $spacing-half $spacing-base+$spacing-half);
+	box-shadow: inset 0 -1px 0 rgba(#000, 0.4);
+	border-radius: $border-radius;
+
+	/* Bg colour combined with disabled state */
 	&,
-	&:visited {border: 1px solid darken($color-brand, 10%);}
-	
+	&[disabled],
+	&.is-disabled {background-color: $color-cta;}
+
+	/* Parent + pseudo classes */
 	&,
 	&:visited,
 	&:hover,
 	&:focus {color: #fff;}
-	
+
 	/* Pseudo classes */
 	&:hover,
-	&:focus,
-	/* Menu toggle button `.is-expanded` state */
-	&.btn--menu-toggle.is-expanded {
-		@include linear-gradient(lighten($color-brand, 5%), darken($color-brand, 8%));
-		border-color: $color-brand;
+	&:focus {}
+
+	&:active {
+		box-shadow: inset 0 0 0 rgba(#000, 0.4),
+								inset 0 1px 2px rgba(#000, 0.3);
 	}
-	
-	&:active,
-	/* Menu toggle button `.is-expanded` state */
-	&.btn--menu-toggle.is-expanded {
-		box-shadow: inset 0.05em 0.15em 0.4em rgba(#000, 0.2),
-					inset 0 0 0.2em rgba(#fff, 0.2),
-					inset 0 1px 2px rgba(#000, 0.3);
-	}
-	
-	/* --Extenders-- */
-	
-	/* Disabled (has to match the bg for the default state) */
-	&[disabled],
-	&.is-disabled {@include linear-gradient($color-brand, darken($color-brand, 15%), $override-bg-color: true, $bg-color-override: $color-brand);}
 }
 
 	/* --Extenders-- */
 
+	/* Alternate */
+	.btn--main-alt {
+		box-shadow: inset 0 -1px 0 rgba(#000, 0.15);
+
+		/* Bg colour combined with disabled state */
+		&,
+		&[disabled],
+		&.is-disabled {background-color: #e8e8e8;}
+
+		/* Parent + pseudo classes */
+		&,
+		&:visited,
+		&:hover,
+		&:focus {color: $color-dark-txt;}
+	}
+
 	/* Compact - reduce padding by 50% */
-	.btn--main-compact {@include to-em(padding, $spacing-third $spacing-half);}
+	.btn--main-compact {@include to-em(padding, $spacing-third $spacing-base);}
